# TeamWork-Guide

./: README.md  poetry.md  pyproject.toml
pytorch/: ReadMe.md  example_pyproject.toml
toml_Files/: ReadMe.md
