[tool.poetry]
name = "teamwork-requirements"
version = "0.1.0"
description = ""
authors = ["Tjark Ziehm"]
license = "MIT"
readme = "README.md"
packages = [{include = "teamwork_requirements"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
